--- a/CV.html
+++ b/CV.html
@@ -28,6 +28,110 @@
             <li><a href="/Contacts.html">Contacts</a> </li>
             </ul>
             </div> 
+          
 </div>
+<br>
+<h3>
+    About me
+</h3>
+<p><span>Resourceful, creative, spontaneous and friendly whilst demonstrating professional driven attitude and drive to gain more knowledge and experience of working in IT line.</p>
+    <p>Customer driven and hand-on approach to work with the self-sufficient energy to challenge; to learn and gain experience in the speciality.</p>
+    <p>Currently seeking a suitable IT position with the potential to learn and grow, whilst making impact on business objectives while maximising my skills and gaining more to deliver an excellent work.</p>
+</span><br>
+
+<h3>Area Of Expertise</h3>
+<ul>
+    <li><em>MS Office</em></li>
+    <li><em>MS Office</em></li>
+    <li><em>Excel</em></li>
+    <li><em>Visual studio</em></li>
+    <li><em>Figma</em></li>
+    <li><em>Git</em></li>
+    <li><em>Github</em></li>
+    <li><em>OneDrive</em></li>
+    <li><em>Skype</em></li>
+    <li><em>HTML5</em></li>
+    <li><em>CSS</em></li>
+    <li><em>JAVA (beginner)</em></li>
+    <li><em>Javascript</em></li>
+</ul>
+
+<br>
+
+<h3>
+    Work experience
+</h3>
+<h5><strong> DLBC(Charity Organization)</strong> – Ipswich.      September 2016- April 2017</h5>
+<p>Part Time/Voluntary- <em> Desktop support</em> </p>
+<p>Duties:</p>
+<ul>
+    <li>Communicating with client and working on site on weekly basis</li>
+    <li>Ensuring running of the projection and the focus is tuned</li>
+    <li>Maintenance of and regularly updating laptop and equipment on site antivirus is UpToDate</li>
+    <li>Problem solve for smooth church program run with no issue.</li>
+    <li></li>
+</ul>
+<p><em>Key technologies: Microsoft Office (Word, Excel, PowerPoint), Outlook/Gmail, Windows (XP, 7, 8 & 10), Dell/HP laptops, Android/ windows tablets, Antivirus.</em></p>
+
+<h5><strong> Cancer research UK, </strong> Ipswich:      September 2016- December 2016</h5>
+<p>Part Time/Voluntary- <em> Retail staff </em> </p>
+<p>Duties:</p>
+<ul>
+    <li>Stocks replacement</li>
+    <li>Stock assembling</li>
+    <li>Serving customers.</li>
+    <li>Handling payments.</li>
+    <li>Overseeing deliveries.</li>
+    <li>Helping with special promotions.</li>
+    <li>Displaying products.</li>
+</ul>
+
+<h5><strong> DLBC (Charity Organization) </strong> – London     September 2014- June 2015</h5>
+<p>Part Time/Voluntary- <em>Bookshop clerk</em> </p>
+<p>Duties:</p>
+<ul>
+    <li>-	serving customers – taking payment, giving advice, answering enquiries and ordering in books </li>
+    <li>-	stock control – assessing the market and ordering new stock</li>
+    <li>-	admin tasks – accounting, distributing orders, arranging deliveries and dealing with returns</li>
+    <li></li>
+    <li></li>
+</ul>
+
+<br>
+
+<h3>Education</h3>
+<ul>
+    <li><strong> University of Northampton</strong></li>
+    <li><strong> University of Suffolk</strong></li>
+    <li><strong> Bsix: Brooke House Sixth Form College</strong></li>
+    <li><strong> Kingsbury School and Sport College</strong></li>
+</ul>
+<br>
+
+<h3>Interest</h3>
+<ul>
+    <li>Cello</li>
+    <li>Singing</li>
+    <li>Writing</li>
+    <li>Reading</li>
+    <li>Swimming</li>
+    <li>Cycling</li>
+    <li></li>
+</ul>
+<br>
+
+<ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li><em></em></li>
+    <li><em></em></li>
+</ul>
+
+<br>
+
+<h3>Reference</h3>
+<br>
+
 </body>
 </html>
