--- a/about_me.html
+++ b/about_me.html
@@ -29,5 +29,25 @@
             </ul>
             </div> 
 </div>
+<p>What to know about me! What to know about me? I love reading and having great conversations about philosopy and religion. 
+    I love reading and seeing changes happening and progression life I am focused and i love reading ; reading books, comics,
+frictions but i hate detective or mystery, i love writing and singing. those are my sparetime hobbies.
+well, i have started to learn how to drive, play cello and swim.</p>
+<!--the profile picture was taken by me using my phone-->
+
+<img src="images/profile_img.jpg"alt= "profile-pic"> 
+<h6>
+    My values
+</h6>
+<p>I value alot of things and its how i treat people but most important of them are</p>
+<p>My faith- this keeps me going</p>
+<p>My culture</p>
+<p>family and friendship</p>
+<p>integrity</p>
+<p>My drive</p>
+<p>My stress reliever</p>
+<p>life experiences</p>
+<p>and a lot more. they make up who I am and have impact on my decision. I am always open to questions and suggestions</p>
+
 </body>
 </html>
