--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <!--using and refrencing my css-->
 <link rel= "stylesheet" href="styles/styles.css">
 <link href="https://fonts.googleapis.com/css?family=Yeon+Sung&display=swap" rel="stylesheet"> 
+<script src="https://kit.fontawesome.com/c2563d8890.js" crossorigin="anonymous"></script>
 
 <!--gotten from google font,https://fonts.google.com/specimen/Yeon+Sung?selection.family=Yeon+Sung-->
 
-<link rel="stylesheet" href=https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css>
+
 <link rel="html" href="/portfolio.html">
 
 </head>
@@ -47,15 +48,19 @@
 
 <h3><em>Student Web Designer - User Interface Design</em></h3>
 
-<p href="/CV.html" >Here is my CV</p>
+<p>Here is my <a href="/CV.html">CV</a></p>
 </div>
+
 <nav>
         <!--i got how to increase my social media icon from https://fontawesome.com/v4.7.0/examples/-->
+        <!--twitter logo from https://fontawesome.com/icons/twitter-square?style=brands-->
+        <!--github logo from https://fontawesome.com/icons/github-square?style=brands-->
+        <!--linkedin logo reference from https://fontawesome.com/icons/linkedin?style=brands-->
         <div class="media">
         
-                <a class="btn btn-lg-clear-light soft-transition"href="https://twitter.com/jemmyztoby" role="button"target="_blank"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
-                <a class="btn btn-lg-clear-light soft-transition"href="https://github.com/JemiOlan"role="button"target="_blank"><i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
-                <a class="btn btn-lg-clear-light soft-transition"href="https://www.linkedin.com/in/jemima-olanrewaju-461047189/"role="button"target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+                <a class="btn btn-lg-clear-light soft-transition"href="https://twitter.com/jemmyztoby" role="button"target="_blank"><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                <a class="btn btn-lg-clear-light soft-transition"href="https://github.com/JemiOlan"role="button"target="_blank"><i class="fab fa-github-square fa-2x" aria-hidden="true"></i></a>
+                <a class="btn btn-lg-clear-light soft-transition"href="https://www.linkedin.com/in/jemima-olanrewaju-461047189/"role="button"target="_blank"><i class="fab fa-linkedin fa-2x" aria-hidden="true"></i></a>
         
         </div>
         </nav>
