--- a/CV.html
+++ b/CV.html
@@ -30,18 +30,22 @@
           
 </div>
 <br>
+<!--this is where the body starts, image was placed here-->
 <div class="cv_starts">
     <img src="/images/resizeimage- profil.jpg">
     <div class="introduction">
+        <!--the starting header-->
 <h3>
     About me
 </h3>
+<!--description of me in a professional way-->
 <p>Resourceful, creative, spontaneous and friendly whilst demonstrating professional driven attitude and drive to gain more knowledge and experience of working in IT line.</p>
     <p>Customer driven and hand-on approach to work with the self-sufficient energy to challenge; to learn and gain experience in the speciality.</p>
     <p>Currently seeking a suitable IT position with the potential to learn and grow, whilst making impact on business objectives while maximising my skills and gaining more to deliver an excellent work.</p>
 
 </div>
 <br>
+<!--listing of software i can use-->
 <div class="area_expertise">
 <h3>Area Of Expertise</h3>
 <ul>
@@ -60,6 +64,7 @@
 </ul> 
 </div>
 <br>
+<!--list of work experience and duties involved-->
 <div class="work_experience">
 <h3>
     Work experience
@@ -98,6 +103,7 @@
 </ul>
 </div>
 <br>
+<!--list of schools in chronological order without dates-->
 <div class="education">
 <h3>Education</h3>
 <ul>
@@ -109,6 +115,7 @@
 </div>
 <br>
 <div class="interest">
+    <!--lists of interests | hobbies-->
 <h3>Interest, more like Hobbies</h3>
 <ul>
     <li>Cello</li>
@@ -120,7 +127,7 @@
 </ul>
 </div>
 <br>
-
+<!--references for CV-->
 <div class="references">
 <h3>References</h3>
 <p>On request</p>
