--- a/Contacts.html
+++ b/Contacts.html
@@ -67,8 +67,9 @@
                     <div class="info">
                     <h4>Address:</h4>
                     
-                        <Address>St James Road,United Kingdom, DA1 3 VQ</Address> </div>
+                        <Address>St James Road,United Kingdom, DA1 3VQ</Address> </div>
                 </div></div>
+<!--this is the contact form to get message directed to me-->
                 <div class="col-right">
                  <form>
                      <div class="row">
